--- a/ClientSide/src/styles/App.css
+++ b/ClientSide/src/styles/App.css
@@ -390,3 +390,48 @@ filter: grayscale(0);
 	color: #fff;
 	font-size: 18px;
 }
+.card-sec{
+	width: 100%;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	
+}
+.card{
+    width: 60%;
+    height: 40vh;
+    display: flex;
+	flex-direction: row;
+    align-items: center;
+    border: 1px solid black;
+	/* background-color: #fff; */
+}
+.imag-sec{
+    width: 30%;
+}
+.imag-sec img{
+    width: 100%;
+	height: 35vh;
+    
+}
+.descrip{
+    width: 70%;
+    margin-left: 40px;
+}
+
+.descrip a{
+    font-size: 12px;
+    text-decoration: none;
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-image: linear-gradient(orange, tomato);
+
+}
+.descrip p{
+	font-size: 20px;
+}
