--- a/ClientSide/src/styles/App.css
+++ b/ClientSide/src/styles/App.css
@@ -395,12 +395,12 @@ filter: grayscale(0);
 	height: auto;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	/* justify-content: center; */
+	/* align-items: center; */
 	
 }
 .card{
-    width: 60%;
+    width: 100%;
     height: 40vh;
     display: flex;
 	flex-direction: row;
@@ -434,4 +434,33 @@ filter: grayscale(0);
 }
 .descrip p{
 	font-size: 20px;
+}
+
+.main-card{
+	width: 100%;
+	height: 70vh;
+	margin: 20px 0px;
+	display: flex;
+}
+.card-block{
+	margin-top: 20px;
+	width: 60%;
+	margin-left: 20px;
+	overflow: hidden;
+	overflow-y:auto;
+}
+.card-block2{
+	width: 40%;
+}
+.card-block2 img{
+	width: 100%;
+	height: 100%;
+}
+.card-title{
+	font-family: sans-serif;
+	font-weight: bold;
+	color: tomato;
+	text-align: center;
+	text-transform: uppercase;
+	margin: 20px 0px;
 }
